<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:text="@string/cv_builder"
        android:textColor="@color/pink"
        android:gravity="center">
    </TextView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/purple">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/profile_picture"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/white"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/profile_picture"
            android:layout_marginVertical="10dp"
            android:textColor="@color/black">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/personal_details"
            android:backgroundTint="@color/white"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:text="@string/personal_details"
            android:textColor="@color/black"
            android:layout_marginVertical="20dp">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/summary_info"
            android:backgroundTint="@color/white"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginVertical="20dp"
            android:text="@string/summary"
            android:textColor="@color/black">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/education_info"
            android:backgroundTint="@color/white"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginVertical="20dp"
            android:text="@string/education"
            android:textColor="@color/black">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/experience_info"
            android:backgroundTint="@color/white"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginVertical="20dp"
            android:text="@string/experience"
            android:textColor="@color/black">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/certifications_info"
            android:backgroundTint="@color/white"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginVertical="20dp"
            android:text="@string/certifications"
            android:textColor="@color/black">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/references_info"
            android:backgroundTint="@color/white"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginVertical="20dp"
            android:text="@string/references"
            android:textColor="@color/black">
        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/preview_info"
            android:backgroundTint="@color/white"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginVertical="20dp"
            android:text="Preview"
            android:textColor="@color/black">
        </Button>

    </LinearLayout>

</LinearLayout>